<resources>
    <string name="app_name">QazaqQuest</string>
    <string name="home">Главная</string>
    <string name="lessons">Уроки</string>
    <string name="settings">Настройки</string>

    <string name="AppName">QazaqQuest</string>
    <string name="todo">TODO</string>
    <string name="lesson_of_the_day_1">Урок дня: Фрукты</string>
    <string name="desription_of_the_lesson_1">Расширте словарный запас новыми словами на тему фруктов</string>
    <string name="lesson_one_time">5 мин</string>
    <string name="lesson_one_text_practice">Практика делает совершенным</string>
    <string name="vocabulary">Словарный запас</string>
    <string name="grammar">Грамматика</string>
    <string name="testing">Интерактивные тесты</string>
    <string name="lesson_of_the_day_preview">Урок дня</string>
    <string name="next">Следующий</string>
    <string name="fruits_in_kazakh">Фрукты на Казахском</string>
    <string name="flashcards_button">Карточки</string>
    <string name="quiz">Квиз</string>
    <string name="translation_of_word1">яблоко</string>
    <string name="alma">alma</string>
    <string name="unit3title">Казахский: глубже в историю и традиции</string>
    <string name="theme_nauryz">Наурыз: Весенний праздник казахской культуры</string>
    <string name="theme_kazakh_khandar">Путь к величию: История формирования казахского ханства</string>
    <string name="theme_sightseeing">Казахстанские достопримечательности и туристические маршруты</string>


    <string name="your_article_text">
    <![CDATA[
Наурыз – древний исторический праздник, тесно связанный с природными циклами. Его отмечают миллионы людей по всей Азии и даже в Европе. Давайте вспомним историю этого праздника и различные традиции его празднования в Казахстане.
    ]]>
</string>

    <string name="your_article_text2">
    <![CDATA[
Праздник Наурыз возник в праисторические времена, затерявшись в тумане давних эпох. Его корни уходят глубоко в историю, в моменты, когда первобытные общества, с восхищением наблюдая за природными явлениями, сделали первые шаги к пониманию круговорота времени и жизни. Традиции Наурыза прониклись мудростью веков, позволяя современным поколениям переживать историю и культуру своих предков через праздничные обряды и церемонии, сохраняя живым древний дух праздника.
    ]]>
</string>
    <string name="nauryz_title2">Казахские обычаи и традиции, связанные с Наурызом</string>
    <string name="kokpar">Игра «Кокпар»</string>
    <string name="kozhe">блюдо «Наурыз-коже»</string>


    <string name="title_correct">Правильно!</string>
    <string name="title_wrong">Неправильно!</string>
    <string name="score_message">Your score: %d</string>
    <string name="history_zov1">Давным-давно, в сердце Евразийских степей, где безграничные просторы простирались от Алтайских гор до Каспийского моря, кочевали многочисленные племена и народы. Эти земли, покрытые ковром разнотравья, были свидетелями величественных караванов, пересекающих Шелковые пути, великих сражений и легендарных воинов. Степи представляли собой огромные просторы, где можно было встретить как суровую зиму, так и палящее лето. Здесь жили народы, которые научились выживать в этих условиях, адаптируясь к резким изменениям погоды и нехватке воды. Одними из таких народов были казахи – гордые и свободолюбивые кочевники, чьи традиции и обычаи передавались из поколения в поколение.</string>
    <string name="zov2">Казахи были мастерами кочевой жизни. Их юрты – мобильные дома, которые можно было легко собрать и разобрать, идеально подходили для кочевания по степям. Эти юрты были сделаны из войлока и дерева, обеспечивая тепло зимой и прохладу летом. Каждая деталь юрты была продумана и функциональна: от украшений до внутреннего устройства. Основой экономики казахов было скотоводство. Они разводили лошадей, овец, верблюдов и крупный рогатый скот. Лошади играли центральную роль в жизни казахов, они использовались не только как транспорт, но и в военных делах. Считалось, что настоящий воин должен быть отличным наездником, способным сражаться на коне.</string>
    <string name="zov3">Шелковый путь, древняя торговая магистраль, соединявшая Восток и Запад, проходил через земли, населенные казахами. Этот путь не только приносил богатства и товары, но и способствовал культурному обмену. Через степи проходили караваны, нагруженные шелком, пряностями, драгоценными камнями и другими товарами. Казахи активно участвовали в этой торговле, выступая в роли посредников. Они обеспечивали безопасность караванов, предлагали свои услуги в обмен на товары и установили прочные торговые связи с соседними народами. Это влияние Шелкового пути способствовало развитию ремесел, культуры и искусства у казахов.</string>
    <string name="rozhdenie1">В XV веке, в условиях постоянных междоусобиц и борьбы за выживание, возникла необходимость объединения казахских племен. Эпоха войн и раздоров требовала сильного лидера, способного привести народ к единству и процветанию. Именно тогда на исторической арене появился Керей и Жанибек – два мудрых и отважных лидера, которые решили создать независимое государство для казахов.</string>
    <string name="rozhdenie2">К XV веку в Центральной Азии сложилась сложная политическая ситуация. Многочисленные кочевые племена и ханства боролись за власть и ресурсы. Ослабление Золотой Орды и распад Чагатайского улуса создали вакуум власти, который многие стремились заполнить. В этот период кочевники казахских племен находились под властью ханства Абулхаира, которое было ослаблено внутренними конфликтами и внешними угрозами.</string>
    <string name="rozh3">Керей и Жанибек, оба происходившие из рода Чингизидов, были опытными и уважаемыми лидерами. Они понимали, что разделение и постоянные междоусобицы приводят к ослаблению казахского народа. Вместо этого они стремились к созданию единого, сильного государства, которое могло бы защитить и объединить их народ. Керей-хан: Старший из двух лидеров, Керей обладал глубоким пониманием военной стратегии и дипломатии. Он был известен своей мудростью и умением находить компромиссы среди разрозненных племен. Жанибек-хан: Жанибек, младший из лидеров, отличался харизмой и решительностью. Его лидерские качества и способность вдохновлять людей делали его идеальным партнером для Керея в их общей задаче создания нового государства.</string>
    <string name="veliki1">В 1465 году, во времена ослабления Могулистана, Керей и Жанибек вместе со своими сторонниками решили покинуть земли, находившиеся под властью ханства Абулхаира. Это было смелое и рискованное решение, но их вера в будущее собственного народа была непоколебима. Они двинулись на запад, к берегам реки Шу, где основали свое новое государство – Казахское ханство.</string>
    <string name="veliki2">К середине XV века Могулистан, некогда могущественное государство, начал терять свои позиции. Внутренние раздоры, внешние угрозы и экономические трудности ослабили его влияние на подвластные территории. Это создало благоприятные условия для смелых шагов Керея и Жанибека. Ханство Абулхаира также было ослаблено после ряда неудачных военных кампаний и внутренних конфликтов.</string>
    <string name="veliki3">Великий исход Решение покинуть родные земли и отправиться в неизвестность было чрезвычайно смелым и рискованным шагом. Керей и Жанибек собрали своих сторонников – людей, которые верили в их видение и были готовы следовать за ними. Этот исход, известный как Великий переселение казахов, стал поворотным моментом в истории казахского народа. Маршрут и трудности пути: Караван казахов двигался на запад, преодолевая долгий и трудный путь через степи и горы. Они несли с собой все необходимое для жизни: скот, юрты, припасы и оружие. В пути они сталкивались с трудностями, такими как нехватка воды и еды, нападения разбойников и суровые погодные условия. Поддержка и союзники: По пути к берегам реки Шу, Керей и Жанибек заручались поддержкой других кочевых племен, которые видели в них надежду на лучшее будущее. Это укрепляло их силы и давало дополнительную уверенность в успехе предприятия.</string>


</resources>