<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LessonOfTheDay1">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/icon_cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/lesson_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center_horizontal"
        android:text="@string/lesson_of_the_day_preview"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rectangle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="start"
        android:contentDescription="@string/todo"
        android:src="@drawable/rectangle2"
        app:layout_constraintTop_toBottomOf="@+id/lesson_preview" />

    <TextView
        android:id="@+id/amount_of_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="8/15 слов изучено"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintTop_toBottomOf="@+id/lesson_preview"
        android:layout_marginStart="21dp"
        android:layout_marginTop="21dp"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar_linear_lesson1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:trackColor="@color/grey"
        app:indicatorColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/amount_of_words"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/fruits_in_kazakh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fruits_in_kazakh"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar_linear_lesson1"
        android:layout_marginTop="30dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_semibold"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/rounded_image"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        android:src="@drawable/apple_photo"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/fruits_in_kazakh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/text_of_image1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alma"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@+id/rounded_image"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"/>
    <TextView
        android:id="@+id/translate_of_image1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translation_of_word1"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/text_of_image1"
        android:gravity="center_horizontal"
        android:layout_marginTop="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/flashcards_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/round_button"
            android:text="@string/flashcards_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="onButtonClick"
            android:stateListAnimator="@null"
            android:focusable="true"/>

        <Button
            android:id="@+id/quizz_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:text="@string/quiz"
            android:background="@drawable/round_button_grey"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="onButtonClick"
            android:stateListAnimator="@null"
            android:focusable="true" />

    </LinearLayout>


    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="onButtonClick"
        android:stateListAnimator="@null"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/round_button"/>




</androidx.constraintlayout.widget.ConstraintLayout>