<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home">

    <TextView
        android:id="@+id/tvQQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/AppName"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvQQ"
        android:layout_marginTop="6dp"
        android:src="@drawable/rectangle21"
        app:layout_constraintStart_toStartOf="@+id/tvQQ"
        app:layout_constraintEnd_toEndOf="@+id/tvQQ"
        android:contentDescription="@string/todo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rectangle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/fruit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="19dp"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/fruits"
                app:shapeAppearanceOverlay="@style/roundimageview" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_of_the_day_1"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@+id/fruit"
                android:layout_marginStart="21dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat_medium" />

            <ImageView
                android:id="@+id/rectangle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_gravity="start"
                android:contentDescription="@string/todo"
                android:src="@drawable/rectangle2"
                app:layout_constraintTop_toBottomOf="@+id/tv1" />

            <LinearLayout
                android:id="@+id/lesson_day_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="19dp"
                app:layout_constraintTop_toBottomOf="@+id/tv1">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/desription_of_the_lesson_1"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:clickable="true"
                    android:focusable="true"/>

                <ImageView
                    android:id="@+id/ivtime"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/time_clock"
                    android:contentDescription="@string/todo"
                    android:clickable="true"
                    android:focusable="true"/>
                <TextView
                    android:id="@+id/tvtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lesson_one_time"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lesson_one_text_practice"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/lesson_day_description"
                android:layout_marginStart="21dp"
                android:layout_marginTop="50dp"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_semibold"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                tools:ignore="ScrollViewCount">

                <LinearLayout
                    android:id="@+id/horizontal_scrolling_practice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="15dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv3">


                    <LinearLayout
                        android:id="@+id/dictionaryID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/vocab"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/vocabulary"
                            app:shapeAppearanceOverlay="@style/roundimageview"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/vocabulary"
                            android:textColor="@color/black"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="16sp"
                            android:layout_marginTop="9dp"
                            android:layout_marginStart="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/grammarLayoutHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/grammar"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/grammar"
                            app:shapeAppearanceOverlay="@style/roundimageview"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/grammar"
                            android:textColor="@color/black"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="16sp"
                            android:layout_marginTop="9dp"
                            android:layout_marginStart="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/interactive_testID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:orientation="vertical">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/testing"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/testing"
                            app:shapeAppearanceOverlay="@style/roundimageview"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/testing"
                            android:textColor="@color/black"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="16sp"
                            android:layout_marginTop="9dp"
                            android:layout_marginStart="10dp"/>

                    </LinearLayout>


                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unit3title"
                android:textColor="@color/black"
                android:layout_marginStart="21dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="15dp"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_semibold"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent"
                app:layout_constraintTop_toBottomOf="@+id/tv3">

                <LinearLayout
                    android:id="@+id/horizontal_scrolling_culture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="0dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/iv_nauryz"
                                android:layout_width="200dp"
                                android:layout_height="300dp"
                                android:adjustViewBounds="true"
                                android:scaleType="fitCenter"
                                android:src="@drawable/nauryz"
                                app:shapeAppearanceOverlay="@style/roundimageview"/>

                            <TextView
                                android:id="@+id/tv_nauryz"
                                android:layout_width="match_parent"
                                android:layout_height="90dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="9dp"
                                android:fontFamily="@font/montserrat_medium"
                                android:text="@string/theme_nauryz"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/historyLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="13dp"
                            android:orientation="vertical">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/iv_khans"
                                android:layout_width="200dp"
                                android:layout_height="300dp"
                                android:adjustViewBounds="true"
                                android:scaleType="fitCenter"
                                android:src="@drawable/kazakhkhans"
                                app:shapeAppearanceOverlay="@style/roundimageview"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="90dp"
                                android:text="@string/theme_kazakh_khandar"
                                android:textColor="@color/black"
                                android:fontFamily="@font/montserrat_medium"
                                android:textSize="14sp"
                                android:layout_marginTop="9dp"
                                android:layout_marginStart="10dp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="13dp"
                            android:orientation="vertical">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/iv_sightseeing"
                                android:layout_width="200dp"
                                android:layout_height="300dp"
                                android:adjustViewBounds="true"
                                android:scaleType="fitCenter"
                                android:src="@drawable/sightseeing"
                                app:shapeAppearanceOverlay="@style/roundimageview"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:text="@string/theme_sightseeing"
                                android:textColor="@color/black"
                                android:fontFamily="@font/montserrat_medium"
                                android:textSize="14sp"
                                android:layout_marginTop="9dp"
                                android:layout_marginStart="10dp"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="70dp"/>


        </LinearLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>